feat: add working demo login
